--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -647,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time to break out Bayesian statistics. My apologies to those who thought that we could get out of this without math. So if we took the three ports and randomly selected a person from there the odds per port are:\n",
+    "Time to break out Bayesian probability. My apologies to those who thought that we could get out of this without math. So if we took the three ports and randomly selected a person from there the odds per port are:\n",
     "\n",
     "- $P(E_S)=\\frac{1}{3}$\n",
     "- $P(E_C)=\\frac{1}{3}$\n",
@@ -719,6 +719,39 @@
     "df_merge[df_merge.Embarked=='S'].Pclass.value_counts()\n",
     "df_merge[df_merge.Embarked=='C'].Pclass.value_counts()\n",
     "df_merge[df_merge.Embarked=='Q'].Pclass.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, from the data above we know that:\n",
+    "\n",
+    "- $P(C_1|E_S)=\\frac{177}{914}=.194$\n",
+    "- $P(C_1|E_C)=\\frac{141}{270}=.522$\n",
+    "- $P(C_1|E_Q)=\\frac{3}{123}=.024$\n",
+    "\n",
+    "So if we picked C the odds of getting a first class passenger is over 50% Good to know but not what we are after. Remembering Bayes formula:\n",
+    "\n",
+    "- $P(E_S|C_1) = \\frac{P(C_1|E_S) * P(E_S)}{(P(C_1|E_S) * P(E_S)+(P(C_1|E_C) * P(E_C)+(P(C_1|E_Q) * P(E_Q))}$\n",
+    "\n",
+    "and so on. I'm going to save everyone some time and do the equations behind the scenes. \n",
+    "\n",
+    "- $P(E_S|C_1) = .26$\n",
+    "- $P(E_C|C_1) = .71$\n",
+    "- $P(E_Q|C_1) = .03$\n",
+    "\n",
+    "That's good but there are two women traveling on the same ticket. That means they left from the same port. What we are really looking for is \n",
+    "\n",
+    "- $P(E_x|C_1 C_1)$\n",
+    "\n",
+    "Running through Bayes a second time we get:\n",
+    "\n",
+    "- $P(E_S|C_1 C_1) = .12$\n",
+    "- $P(E_C|C_1 C_1) = .88$\n",
+    "- $P(E_Q|C_1 C_1) = .002$\n",
+    "\n",
+    "So there is an 88% chance that the two women debarked from Cherbourg. That's good enough for me. We'll impute C for those two values."
    ]
   },
   {
